Bug 219382 - Laptop internal keyboard not working on LG Gram Pro 16T90SP
Summary: Laptop internal keyboard not working on LG Gram Pro 16T90SP
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Input Devices (show other bugs)
Hardware: All Linux
: P3 normal
Assignee: drivers_input-devices
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-13 16:20 UTC by Dirk Holten
Modified: 2024-10-21 13:29 UTC (History)
2 users (show)

See Also:
Kernel Version:
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmidecode (30.68 KB, text/plain)
2024-10-13 16:20 UTC, Dirk Holten
Details
dsdt.dat (515.56 KB, application/octet-stream)
2024-10-13 16:21 UTC, Dirk Holten
Details
dmesg (83.42 KB, text/plain)
2024-10-13 16:22 UTC, Dirk Holten
Details

Description Dirk Holten 2024-10-13 16:20:12 UTC
Created attachment 307004 [details]
dmidecode

I am following several bug reports for new model laptops of different brands with a non working internal keyboard, in my case the LG Gram Pro 16 2-in-1 (2024) model name 16T90SP. Internal keyboard not working at all (tested up to Kernel 6.11)

Adding this model to the quirks list in drivers/acpi/resource.c

/*
 * DMI matches for boards where the DSDT specifies the kbd IRQ as
 * level active-low and using the override changes this to rising edge,
 * stopping the keyboard from working.
 */

+               /* LG Electronics 16T90SP */
+               .matches = {
+                       DMI_MATCH(DMI_SYS_VENDOR, "LG Electronics"),
+                       DMI_MATCH(DMI_BOARD_NAME, "16T90SP"),

fixes the problem and makes the internal keyboard work.

I would be thankful if this model could be included in the list in future kernel versions.

@Paul Menzel has taken care of several of these requests so I kindly put him in CC for this bug report.
Comment 1 Dirk Holten 2024-10-13 16:21:39 UTC
Created attachment 307005 [details]
dsdt.dat
Comment 2 Dirk Holten 2024-10-13 16:22:04 UTC
Created attachment 307006 [details]
dmesg
Comment 3 Dirk Holten 2024-10-13 16:24:31 UTC
Output of grep -A 30 PS2K dsdt.dsl | grep IRQ -A 1

IRQ (Level, ActiveLow, Exclusive, )
                    {1}
Comment 4 Christian Heusel 2024-10-15 16:50:07 UTC
Hey Dirk,

I can also take care of sending in the quirk, how would you like to be credited?
I'd just add a "Suggested-by: Dirk Holten <dirk.holten@gmx.de>" in the commit if that is fine for you ^_^
Comment 5 Dirk Holten 2024-10-16 13:51:32 UTC
(In reply to Christian Heusel from comment #4)
> Hey Dirk,
> 
> I can also take care of sending in the quirk, how would you like to be
> credited?
> I'd just add a "Suggested-by: Dirk Holten <dirk.holten@gmx.de>" in the
> commit if that is fine for you ^_^

Dear Christian,

thank you for taking care of the fix! The credit is the least that matters for me but your suggestion is of course fine for me.

Thank you again
Comment 7 Christian Heusel 2024-10-21 12:03:25 UTC
v2 of the above patch has been applied, so this can be closed I think: https://lore.kernel.org/all/20241017-lg-gram-pro-keyboard-v2-1-7c8fbf6ff718@heusel.eu/

Note You need to log in before you can comment on or make changes to this bug.